# cmake-sfml

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cmake-sfml.7z
app/: CMakeLists.txt
app/src/: app.ixx  player.ixx  quad_node.ixx
app/src/player/: player.cxx  player_update.cxx
app/src/states/: collider.ixx  edit.ixx  game.ixx  game_init.ixx
app/src/states/edit/: edit.cxx  edit_grid.cxx  edit_level.cxx  edit_menu.cxx  edit_menu_down.cxx  edit_menu_right.cxx  edit_menu_up.cxx  edit_set.cxx  edit_tile_set.cxx  edit_typing.cxx  edit_update.cxx
app/src/states/game/: anim.ixx  camera.ixx  game.cxx  game_update.cxx  player.ixx  quad_node.ixx  tile.cxx  tile.ixx
app/src/states/game/player/: player.cxx  player_collide.cxx  player_update.cxx
core/: CMakeLists.txt
core/src/: bitmap_text.ixx  config.ixx  console.ixx  input.ixx  line.ixx  sprite.ixx  state.ixx  texture.ixx  textures.ixx  transform.ixx  types.ixx  window.ixx
core/src/input/: input.ixx  inputs.ixx
core/src/line/: line.ixx  lines.ixx
core/src/sprite/: sprite.ixx  sprites.ixx
core/src/transform/: transform.ixx  transforms.ixx
executable/: main.cfg
executable/res/planes/textures/: editor_grid_block.png~
executable/res/textures/: editor_layer_active.png~
src/: CMakeLists.txt  main.cpp  main.cxx
src/app/: app.ixx
src/app/states/edit/: edit.cxx  edit.ixx  edit_grid.cxx  edit_level.cxx  edit_menu_down.cxx  edit_menu_right.cxx  edit_menu_up.cxx  edit_tile_set.cxx  edit_typing.cxx  edit_update.cxx
src/app/states/game/: anim.ixx  camera.ixx  collider.ixx  game.cxx  game.ixx  game_draw.cxx  game_load.cxx  game_update.cxx  health.ixx  level_config.ixx  multiplane.ixx  particle.ixx  plane.ixx  quad_node.ixx  tile.cxx  tile.ixx
src/app/states/game/collider/: aabb.ixx
src/app/states/overlay/: overlay.ixx
src/core/: bitmap_text.ixx  config.ixx  input.ixx  line.ixx  music.ixx  random.ixx  shader.ixx  sound.ixx  sprite.ixx  state.ixx  texture.ixx  transform.ixx  types.ixx  window.ixx
(+43 files in other folders)
